--- a/mulit_model_bracket_preds_v1/requirements.txt
+++ b/mulit_model_bracket_preds_v1/requirements.txt
@@ -1,7 +1,8 @@
 functions-framework==3.*
 PyYAML
 google-cloud-storage
-cloud-sql-python-connector[pymysql]
-numpy==2.1.3
-pandas==2.2.3
-scikit_learn==1.5.2
+# cloud-sql-python-connector[pymysql]
+shap
+numpy==2.0
+pandas
+scikit_learn
